chart/templates/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: blue-green-rollout
  labels:
    app: testing
  namespace: blue-green
spec:
  replicas: 1
  selector:
    matchLabels:
      app: testing
  template:
    metadata:
      labels:
        app: testing
    spec:
      volumes:
        - name: emptydir
          emptyDir: {}
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: emptydir
              mountPath: /usr/share/nginx/html
  strategy:
    blueGreen:
      activeService: active-svc
      previewService: preview-svc
      autoPromotionEnabled: false
