chart/templates/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: active-svc
  namespace: blue-green-rollout
spec:
  type: ClusterIP
  selector:
    app: testing
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: preview-svc
  namespace: blue-green-rollout
spec:
  type: ClusterIP
  selector:
    app: testing
  ports:
    - port: 80
      targetPort: 80
